--- a/Calculate scores.ipynb
+++ b/Calculate scores.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -58,20 +58,20 @@
     "        score = 0\n",
     "        for stat in togga_scoring:\n",
     "            if player[\"history\"][season].get(stat):\n",
-    "                score += togga_scoring[stat][index]\n",
+    "                score += togga_scoring[stat][index]*player[\"history\"][season][stat]\n",
     "        player[\"history\"][season][\"togga_score\"] = score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "with open('Data/example_player.json', 'w') as json_data:\n",
-    "    json.dump(data[\"elements\"][176], json_data)"
+    "    json.dump(data[\"elements\"][81], json_data)"
    ]
   },
   {
@@ -88,26 +88,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "range(0, 683) is not JSON serializable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-33-73c113ee20f7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Data/By_Years/one.json'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'w'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mjson_data\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 17\u001b[1;33m     \u001b[0mjson\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdump\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mone_year\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mjson_data\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     18\u001b[0m \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Data/By_Years/two.json'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'w'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mjson_data\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     19\u001b[0m     \u001b[0mjson\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdump\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtwo_year\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mjson_data\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\Users\\Noah\\Anaconda3\\lib\\json\\__init__.py\u001b[0m in \u001b[0;36mdump\u001b[1;34m(obj, fp, skipkeys, ensure_ascii, check_circular, allow_nan, cls, indent, separators, default, sort_keys, **kw)\u001b[0m\n\u001b[0;32m    176\u001b[0m     \u001b[1;31m# could accelerate with writelines in some versions of Python, at\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    177\u001b[0m     \u001b[1;31m# a debuggability cost\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 178\u001b[1;33m     \u001b[1;32mfor\u001b[0m \u001b[0mchunk\u001b[0m \u001b[1;32min\u001b[0m \u001b[0miterable\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    179\u001b[0m         \u001b[0mfp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mchunk\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    180\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\Users\\Noah\\Anaconda3\\lib\\json\\encoder.py\u001b[0m in \u001b[0;36m_iterencode\u001b[1;34m(o, _current_indent_level)\u001b[0m\n\u001b[0;32m    434\u001b[0m                     \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Circular reference detected\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    435\u001b[0m                 \u001b[0mmarkers\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mmarkerid\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mo\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 436\u001b[1;33m             \u001b[0mo\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_default\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mo\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    437\u001b[0m             \u001b[1;32myield\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0m_iterencode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mo\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_current_indent_level\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    438\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mmarkers\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\Users\\Noah\\Anaconda3\\lib\\json\\encoder.py\u001b[0m in \u001b[0;36mdefault\u001b[1;34m(self, o)\u001b[0m\n\u001b[0;32m    178\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    179\u001b[0m         \"\"\"\n\u001b[1;32m--> 180\u001b[1;33m         \u001b[1;32mraise\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrepr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mo\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m\" is not JSON serializable\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    181\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    182\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mencode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mo\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: range(0, 683) is not JSON serializable"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "one_year = range(683)\n",
     "two_year = []\n",
@@ -115,33 +100,90 @@
     "four_year = []\n",
     "five_year = []\n",
     "for i, player in enumerate(data[\"elements\"]):\n",
-    "    if(len(player[\"history\"])>1):\n",
+    "    if(len(player[\"history\"])>1) and player[\"history\"].get(\"2015/16\"):\n",
     "        two_year.append(i)\n",
-    "    if(len(player[\"history\"])>2):\n",
-    "        three_year.append(i)\n",
-    "    if(len(player[\"history\"])>3):\n",
-    "        four_year.append(i)\n",
-    "    if(len(player[\"history\"])>4):\n",
-    "        five_year.append(i)"
+    "        if(len(player[\"history\"])>2) and player[\"history\"].get(\"2014/15\"):\n",
+    "            three_year.append(i)\n",
+    "            if(len(player[\"history\"])>3) and player[\"history\"].get(\"2013/14\"):\n",
+    "                four_year.append(i)\n",
+    "                if(len(player[\"history\"])>4) and player[\"history\"].get(\"2012/13\"):\n",
+    "                    five_year.append(i)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-32-47fd36de0e8f>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-32-47fd36de0e8f>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    a = [0:683]\u001b[0m\n\u001b[1;37m          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 6, 7, 8, 9, 10, 12, 14, 15, 16, 17, 18, 24, 25, 28, 35, 45, 73, 74, 75, 76, 77, 81, 83, 88, 91, 97, 102, 105, 109, 119, 120, 121, 122, 124, 125, 126, 127, 129, 132, 133, 134, 135, 136, 137, 139, 141, 142, 143, 172, 176, 187, 192, 193, 199, 200, 201, 202, 204, 207, 212, 213, 217, 219, 220, 221, 222, 223, 226, 227, 228, 229, 230, 238, 241, 243, 244, 246, 249, 255, 256, 258, 259, 260, 263, 265, 268, 281, 294, 295, 296, 297, 304, 305, 310, 312, 314, 317, 318, 319, 322, 324, 326, 327, 328, 329, 335, 338, 340, 341, 342, 347, 348, 349, 353, 354, 355, 357, 358, 359, 360, 366, 367, 368, 369, 371, 375, 379, 380, 382, 383, 384, 385, 390, 396, 402, 405, 428, 429, 430, 431, 432, 435, 437, 438, 439, 440, 441, 446, 451, 452, 457, 467, 489, 490, 532, 555, 571, 574, 579, 583, 634, 640, 681]\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "print(five_year)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for player in data[\"elements\"]:\n",
+    "    player[\"name\"] = player[\"first_name\"] + \" \" + player[\"second_name\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "point_ranking_16_17 = []\n",
+    "point_ranking_15_16 = []\n",
+    "point_ranking_14_15 = []\n",
+    "point_ranking_13_14 = []\n",
+    "point_ranking_12_13 = []\n",
+    "for i, player in enumerate(data[\"elements\"]):\n",
+    "    try:\n",
+    "        if i in one_year:\n",
+    "            point_ranking_16_17.append((player[\"name\"], player[\"history\"][\"2016/17\"][\"togga_score\"]))\n",
+    "        if i in two_year:\n",
+    "            point_ranking_15_16.append((player[\"name\"], player[\"history\"][\"2015/16\"][\"togga_score\"]))\n",
+    "        if i in three_year:\n",
+    "            point_ranking_14_15.append((player[\"name\"], player[\"history\"][\"2014/15\"][\"togga_score\"]))\n",
+    "        if i in four_year:\n",
+    "            point_ranking_13_14.append((player[\"name\"], player[\"history\"][\"2013/14\"][\"togga_score\"]))\n",
+    "        if i in five_year:\n",
+    "            point_ranking_12_13.append((player[\"name\"], player[\"history\"][\"2012/13\"][\"togga_score\"]))\n",
+    "    except:\n",
+    "        print(i)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#print(sorted(point_ranking_16_17, key=lambda tup: tup[1], reverse=True))\n",
+    "#print(sorted(point_ranking_15_16, key=lambda tup: tup[1], reverse=True))\n",
+    "#print(sorted(point_ranking_14_15, key=lambda tup: tup[1], reverse=True))\n",
+    "#print(sorted(point_ranking_13_14, key=lambda tup: tup[1], reverse=True))\n",
+    "#print(sorted(point_ranking_12_13, key=lambda tup: tup[1], reverse=True))"
+   ]
   },
   {
    "cell_type": "code",
