added more whoscored

--- a/Advanced Stats.ipynb
+++ b/Advanced Stats.ipynb
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
@@ -173,7 +173,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Get Data from WhoScored.com"
+    "## Get Data from WhoScored.com"
    ]
   },
   {
@@ -432,6 +432,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for player in data[\"elements\"]: \n",
+    "    player[\"history\"] = player[\"history\"][\"history_past\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
@@ -452,72 +464,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "import json\n",
     "years = [\"2012/13\", \"2013/14\", \"2014/15\", \"2015/16\", \"2016/17\"]\n",
     "for year in years:\n",
-    "    file = \"Data/Advanced_stats/who_scored_passing_\" + (year[:4] + \"+\" + year[5:] + '.json')\n",
+    "    file = \"Data/Advanced_stats/whoscored_passing_\" + (year[:4] + \"+\" + year[5:] + '.json')\n",
     "    with open(file, 'r', encoding=\"utf8\") as stat_file:\n",
     "        stat_data = json.load(stat_file)  \n",
-    "    first_names = {}\n",
-    "    last_names = {}\n",
+    "    names = {}\n",
     "    for i, player in enumerate(stat_data[\"playerTableStats\"]):\n",
     "        name = player[\"name\"]\n",
-    "        first_name = name.split(\" \")[0]\n",
-    "        last_name = name.split(\" \")[-1]\n",
-    "        if first_name not in first_names:\n",
-    "            first_names.update({first_name: [i]})\n",
+    "        if name not in names:\n",
+    "            names.update({name: [i]})\n",
     "        else:\n",
-    "            first_names[first_name].append(i)\n",
-    "        if last_name not in last_names:\n",
-    "            last_names.update({last_name: [i]})\n",
-    "        else:\n",
-    "            last_names[last_name].append(i)\n",
-    "        stat_data[\"first_names\"] = first_names\n",
-    "        stat_data[\"last_names\"] = last_names\n",
+    "            names[name].append(i)\n",
+    "    stat_data[\"names\"] = names\n",
     "    with open(file, 'w', encoding=\"utf8\") as json_data:\n",
     "        json.dump(stat_data, json_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1982\n",
+      "4848\n"
+     ]
+    }
+   ],
    "source": [
-    "stats = [\"TODO\"]\n",
+    "stats = [\"apps\", \"accurateCrossesPerGame\"]\n",
     "\n",
     "hits = 0\n",
     "misses = 0\n",
     "\n",
     "for player in data[\"elements\"]:\n",
     "    for year in years:\n",
-    "        if year in player[\"history\"][\"history_past\"]:\n",
-    "            file = \"Data/Advanced_Stats/who_aerial\" + \"_\" + (year[:4] + \"+\" + year[5:] + \".json\")\n",
+    "        if year in years:\n",
+    "            file = \"Data/Advanced_Stats/whoscored_passing\" + \"_\" + (year[:4] + \"+\" + year[5:] + \".json\")\n",
     "            with open(file, 'r') as stat_file:\n",
     "                stat_data = json.load(stat_file)  \n",
     "            for stat in stats:                 \n",
     "                ##Petr crouch\n",
     "                ##\"content[0]\":\"owner\":\"altIds\": {\"opta\": \"p3773\"\n",
     "                #data[elements][335][code]\n",
-    "                by_first = stat_data[\"first_names\"].get(player[\"first_name\"])\n",
-    "                by_last = stat_data[\"last_names\"].get(player[\"second_name\"])\n",
-    "                if by_first is not None and by_last is not None:\n",
-    "                    intersection = list(set(by_first).intersection(by_last))\n",
-    "                    if (len(intersection)>0) :\n",
-    "                        hits += 1\n",
-    "                        index = intersection[0]\n",
-    "                        player[\"history\"][\"history_past\"][year][stat] = stat_data[\"playerTableStats\"][index][stat]\n",
-    "                        player[\"history\"][\"history_past\"][year][stat+\"_total\"] = stat_data[\"playerTableStats\"][index][stat]*stat_data[\"playerTableStats\"][index][\"apps\"]\n",
-    "                        if (len(intersection)>1):\n",
-    "                            print(\"OMG\\nOMG\\nOMG\\nOMG\\nOMG\\n\")\n",
+    "                by_name = stat_data[\"names\"].get(player[\"name\"])\n",
+    "                if by_name is not None:\n",
+    "                    index = by_name[0]\n",
+    "                    hits += 1\n",
+    "                    #print(year, index)\n",
+    "                    player[\"history\"][year][stat] = stat_data[\"playerTableStats\"][index][stat]\n",
+    "                    player[\"history\"][year][stat+\"_total\"] = stat_data[\"playerTableStats\"][index][stat]*stat_data[\"playerTableStats\"][index][\"apps\"]\n",
     "                else: misses+=1\n",
     "print(hits)\n",
     "print(misses)"
@@ -552,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {
     "collapsed": true
    },
@@ -561,63 +570,61 @@
     "import json\n",
     "years = [\"2012/13\", \"2013/14\", \"2014/15\", \"2015/16\", \"2016/17\"]\n",
     "for year in years:\n",
-    "    file = \"Data/Advanced_stats/who_scored_defense_\" + (year[:4] + \"+\" + year[5:] + '.json')\n",
+    "    file = \"Data/Advanced_stats/whoscored_defense_\" + (year[:4] + \"+\" + year[5:] + '.json')\n",
     "    with open(file, 'r', encoding=\"utf8\") as stat_file:\n",
     "        stat_data = json.load(stat_file)  \n",
-    "    first_names = {}\n",
-    "    last_names = {}\n",
+    "    names = {}\n",
     "    for i, player in enumerate(stat_data[\"playerTableStats\"]):\n",
     "        name = player[\"name\"]\n",
-    "        first_name = name.split(\" \")[0]\n",
-    "        last_name = name.split(\" \")[-1]\n",
-    "        if first_name not in first_names:\n",
-    "            first_names.update({first_name: [i]})\n",
+    "        if name not in names:\n",
+    "            names.update({name: [i]})\n",
     "        else:\n",
-    "            first_names[first_name].append(i)\n",
-    "        if last_name not in last_names:\n",
-    "            last_names.update({last_name: [i]})\n",
-    "        else:\n",
-    "            last_names[last_name].append(i)\n",
-    "        stat_data[\"first_names\"] = first_names\n",
-    "        stat_data[\"last_names\"] = last_names\n",
+    "            names[name].append(i)\n",
+    "    stat_data[\"names\"] = names\n",
     "    with open(file, 'w', encoding=\"utf8\") as json_data:\n",
     "        json.dump(stat_data, json_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3964\n",
+      "9696\n"
+     ]
+    }
+   ],
    "source": [
-    "stats = [\"TODO\"]\n",
+    "stats = [\"tacklePerGame\", \"interceptionPerGame\", \"clearancePerGame\", \"outfielderBlockPerGame\"]\n",
+    "\n",
     "\n",
     "hits = 0\n",
     "misses = 0\n",
     "\n",
     "for player in data[\"elements\"]:\n",
     "    for year in years:\n",
-    "        if year in player[\"history\"][\"history_past\"]:\n",
-    "            file = \"Data/Advanced_Stats/who_aerial\" + \"_\" + (year[:4] + \"+\" + year[5:] + \".json\")\n",
+    "        if year in years:\n",
+    "            file = \"Data/Advanced_Stats/whoscored_defense\" + \"_\" + (year[:4] + \"+\" + year[5:] + \".json\")\n",
     "            with open(file, 'r') as stat_file:\n",
     "                stat_data = json.load(stat_file)  \n",
-    "            for stat in stats:                 \n",
+    "            for stat in stats: \n",
     "                ##Petr crouch\n",
     "                ##\"content[0]\":\"owner\":\"altIds\": {\"opta\": \"p3773\"\n",
     "                #data[elements][335][code]\n",
-    "                by_first = stat_data[\"first_names\"].get(player[\"first_name\"])\n",
-    "                by_last = stat_data[\"last_names\"].get(player[\"second_name\"])\n",
-    "                if by_first is not None and by_last is not None:\n",
-    "                    intersection = list(set(by_first).intersection(by_last))\n",
-    "                    if (len(intersection)>0) :\n",
-    "                        hits += 1\n",
-    "                        index = intersection[0]\n",
-    "                        player[\"history\"][\"history_past\"][year][stat] = stat_data[\"playerTableStats\"][index][stat]\n",
-    "                        player[\"history\"][\"history_past\"][year][stat+\"_total\"] = stat_data[\"playerTableStats\"][index][stat]*stat_data[\"playerTableStats\"][index][\"apps\"]\n",
-    "                        if (len(intersection)>1):\n",
-    "                            print(\"OMG\\nOMG\\nOMG\\nOMG\\nOMG\\n\")\n",
+    "                by_name = stat_data[\"names\"].get(player[\"name\"])\n",
+    "                if by_name is not None:\n",
+    "                    index = by_name[0]\n",
+    "                    hits += 1\n",
+    "                    #print(year, index)\n",
+    "                    player[\"history\"][year][stat] = stat_data[\"playerTableStats\"][index][stat]\n",
+    "                    player[\"history\"][year][stat[:-7]+\"_total\"] = stat_data[\"playerTableStats\"][index][stat]*stat_data[\"playerTableStats\"][index][\"apps\"]\n",
     "                else: misses+=1\n",
     "print(hits)\n",
     "print(misses)"
@@ -625,19 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "for player in data[\"elements\"]: \n",
-    "    player[\"history\"] = player[\"history\"][\"history_past\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 70,
    "metadata": {
     "collapsed": false
    },
