--- a/Advanced Stats.ipynb
+++ b/Advanced Stats.ipynb
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 71,
    "metadata": {
     "collapsed": false
    },
@@ -499,13 +499,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1982\n",
-      "4848\n"
+      "2973\n",
+      "7272\n"
      ]
     }
    ],
    "source": [
-    "stats = [\"apps\", \"accurateCrossesPerGame\"]\n",
+    "stats = [\"apps\", \"accurateCrossesPerGame\", \"keyPassPerGame\"]\n",
     "\n",
     "hits = 0\n",
     "misses = 0\n",
@@ -526,7 +526,8 @@
     "                    hits += 1\n",
     "                    #print(year, index)\n",
     "                    player[\"history\"][year][stat] = stat_data[\"playerTableStats\"][index][stat]\n",
-    "                    player[\"history\"][year][stat+\"_total\"] = stat_data[\"playerTableStats\"][index][stat]*stat_data[\"playerTableStats\"][index][\"apps\"]\n",
+    "                    if stat !=\"apps\":\n",
+    "                        player[\"history\"][year][stat[:-7]+\"_total\"] = stat_data[\"playerTableStats\"][index][stat]*stat_data[\"playerTableStats\"][index][\"apps\"]\n",
     "                else: misses+=1\n",
     "print(hits)\n",
     "print(misses)"
@@ -632,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 72,
    "metadata": {
     "collapsed": false
    },
