--- a/Calculate scores.ipynb
+++ b/Calculate scores.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 191,
    "metadata": {
     "collapsed": true
    },
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 195,
    "metadata": {
     "collapsed": false
    },
@@ -26,27 +26,27 @@
     "togga_scoring = {\n",
     "\"goals_scored\": [9,9,10,10],\n",
     "\"assists\": [6,6,8,9],\n",
-    "\"key_passes\": [2,2,2,6],\n",
+    "\"keyPass_total\": [2,2,2,6],\n",
     "\"ontarget_scoring_att\": [2,2,2,2],\n",
-    "\"total_cross\": [1,1,1,1],\n",
+    "\"accurateCrosses_total\": [1,1,1,1],\n",
     "\"successful_dribbles\": [1,1,1,1],\n",
     "\"dispossessed\": [-0.5,-0.5,-0.5,-0.5],\n",
     "\"own_goals\": [-9,-9,-9,-9],\n",
     "\"clean_sheets\": [0,1,6,8],\n",
     "\"saves\": [0,0,0,2],\n",
-    "\"interception\": [1,1,1,1],\n",
-    "\"tackles\": [1,1,1,1],\n",
+    "\"interception_total\": [1,1,1,1],\n",
+    "\"tackle_total\": [1,1,1,1],\n",
     "\"goals_conceded\": [0,0,-2,-2],\n",
     "\"penalties_saved\": [0,0,0,8],\n",
     "\"yellow_cards\": [-3,-3,-3,-3],\n",
     "\"red_cards\": [-7,-7,-7,-7],\n",
     "\"aerialWonPerGame_total\": [0.5,0.5,1,1],\n",
-    "\"total_clearance\": [0,0,0.25,0.25]}"
+    "\"interception_total\": [0,0,0.25,0.25]}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 196,
    "metadata": {
     "collapsed": false
    },
@@ -78,19 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "for player in data[\"elements\"]:\n",
-    "    player[\"name\"] = player[\"first_name\"] + \" \" + player[\"second_name\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 197,
    "metadata": {
     "collapsed": false
    },
